--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -48,7 +48,7 @@
           </mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="full-width">
+        <!-- <mat-form-field appearance="outline" class="full-width">
           <mat-label>Role</mat-label>
           <mat-select formControlName="role">
             <mat-option *ngFor="let role of roles" [value]="role">
@@ -60,7 +60,7 @@
           <mat-error *ngIf="registerForm.get('role')?.hasError('required')">
             Role is required
           </mat-error>
-        </mat-form-field>
+        </mat-form-field> -->
 
         <button mat-raised-button color="primary" 
                 type="submit" 
