--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -1,1 +1,39 @@
-<p>booking works!</p>
+<div class="container">
+  @if (isLoading) {
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  } @else if (bookings.length === 0) {
+    <div class="no-bookings">
+      <mat-card>
+        <mat-card-content>
+          No bookings found.
+        </mat-card-content>
+      </mat-card>
+    </div>
+  } @else {
+    <table mat-table [dataSource]="bookings" class="mat-elevation-z8">
+      <ng-container matColumnDef="reservation_id">
+        <th mat-header-cell *matHeaderCellDef>Booking ID</th>
+        <td mat-cell *matCellDef="let booking">{{ booking.reservation_id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="event_id">
+        <th mat-header-cell *matHeaderCellDef>Event id</th>
+        <td mat-cell *matCellDef="let booking">
+          {{ booking.event_id }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="user_id">
+        <th mat-header-cell *matHeaderCellDef>Booked By</th>
+        <td mat-cell *matCellDef="let booking">
+          {{ booking.user_id }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  }
+</div>
