--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -24,4 +24,28 @@ mat-toolbar {
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.2);
   }
+
+  .mat-menu-panel.vertical-menu {
+    padding: 0;
+    
+    .mat-menu-content {
+      display: flex;
+      flex-direction: column;
+      
+      .mat-menu-item {
+        display: block;
+        width: 100%;
+        text-align: left;
+        padding: 0 16px;
+        line-height: 48px;
+        height: 48px;
+        
+        border-radius: 0;
+        
+        &:hover {
+          background: rgb(55, 63, 146);
+        }
+      }
+    }
+  }
 }
